# windowsget_pdm

./: .dockerignore  .pdm.toml  404.html  index.html  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  docs.yml  main.yml
docs/: index.md
research/: replace.ipynb
search/: search_index.json
src/windowsget_pdm/: __init__.py  downloader.py
tests/unit/: test_download_URL_and_filepath.py  test_download_URL_only.py
