[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "windowsget_pdm"
version = "0.0.1"
authors = [
  { name="c17hawke", email="sunny.c17hawke@gmail.com" },
]
description = "windowsget_pdm is a Python-based command-line interface (CLI) utility that can be used to download files from the internet on Windows operating system."
requires-python = ">=3.7"


[project.readme]
"content-type" = "text/markdown"
"file" = "README.md"

[project.urls]
"Bug Tracker" = "https://github.com/c17hawke/windowsget_pdm/issues"
"Documentation" = "https://c17hawke.github.io/windowsget_pdm/"
"Homepage" = "https://c17hawke.github.io/windowsget_pdm/"
"Source" = "https://github.com/c17hawke/windowsget_pdm"

[tool.pytest.ini_options]
testpaths = [
    "tests"
    ]

[tool.mypy]
mypy_path = "src"
ignore_missing_imports = true